@@ -991,6 +991,7 @@ Channel.prototype.sendAll = function(message, data) {
     if(this.name == "")
         return;
     this.server.io.sockets.in(this.name).emit(message, data);
+    this.server.sslio.sockets.in(this.name).emit(message, data);
 }
 
 Channel.prototype.sendAllWithPermission = function(perm, msg, data) {
