@@ -20,6 +20,10 @@ var defaults = {
     "mysql-pw"            : "supersecretpass",
     "express-host"        : "0.0.0.0",
     "io-host"             : "0.0.0.0",
+    "enable-ssl"          : false,
+    "ssl-keyfile"         : "",
+    "ssl-certfile"        : "",
+    "ssl-port"            : 443,
     "asset-cache-ttl"     : 0,
     "web-port"            : 8080,
     "io-port"             : 1337,
