@@ -1148,6 +1148,9 @@ $.getScript(IO_URL+"/socket.io/socket.io.js", function() {
             if(i >= 0)
                 io.transports.splice(i, 1);
         }
+        var opts = {};
+        if (location.protocol === "https:")
+            opts.secure = true;
         socket = io.connect(IO_URL);
         setupCallbacks();
     }
