@@ -10,7 +10,7 @@
     <link href="./assets/css/bootstrap.css" rel="stylesheet">
     <link href="./assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="./assets/css/ytsync.css" rel="stylesheet" id="defaultcss">
-    <link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
+    <link href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
     <style>
       body {
         padding-top: 60px;
@@ -230,14 +230,14 @@
   </div>
   <div id="footer">
     <p class="muted">
-    CyTube Software Copyright &copy; 2013 Calvin Montgomery&nbsp;&middot;&nbsp;Available for free on <a href="http://github.com/calzoneman/sync">GitHub</a>&nbsp;&middot;
+    CyTube Software Copyright &copy; 2013 Calvin Montgomery&nbsp;&middot;&nbsp;Available for free on <a href="https://github.com/calzoneman/sync">GitHub</a>&nbsp;&middot;
     <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=5Y7PUVVGVSEWG&lc=US&item_name=CyTube&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted">Donate</a>
     </p>
 
   </div>
 
   <script src="./assets/js/jquery.js"></script>
-  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+  <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
   <!-- My Javascript -->
   <script src="./assets/js/data.js"></script>
   <script src="./assets/js/iourl.js"></script>
@@ -248,8 +248,9 @@
   <script src="./assets/js/ui.js"></script>
   <script src="./assets/js/callbacks.js"></script>
   <!-- APIs -->
-  <script defer src="http://www.youtube.com/iframe_api"></script>
-  <script defer src="http://api.dmcdn.net/all.js"></script>
+  <script defer src="//www.youtube.com/iframe_api"></script>
+  <script defer src="//api.dmcdn.net/all.js"></script>
+  <!-- jwpsrv's SSL cert doesn't match, force http -->
   <script defer src="http://jwpsrv.com/library/QouFCLBMEeKC+CIACpYGxA.js"></script>
   <script defer src="./assets/js/sc.js"></script>
   <script defer src="./assets/js/froogaloop.min.js"></script>
